# school-management-system

./: alembic.ini  docker-compose.yml  main.py  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 37404938a96a_initial_migration.py
docs/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_299d3d5bb41c579e___init___py.html  z_299d3d5bb41c579e_model_py.html  z_67d056e3707ef46d___init___py.html  z_67d056e3707ef46d_config_py.html  z_67d056e3707ef46d_repository_py.html  z_c0152e0f41c29602___init___py.html  z_c0152e0f41c29602_dto_py.html  z_c0152e0f41c29602_school_management_service_py.html
src/: model.py
src/database/: config.py  repository.py
src/db/: config.py  repository.py
src/domain/: model.py
src/service/: dto.py  school_management_service.py
tests/: conftest.py  test_repository.py
tests/test_database/: conftest.py  test_repository.py
tests/test_service/: conftest.py  test_school_management_service.py
